# hex

bundle/: Dockerfile  deploy-fly.sh  entrypoint.sh  fly.toml  nginx.conf  run-backend.sh  supervisord.conf
bundle/dashboard-backend/: package.json  server.js
calendar-site/: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.dev.frontend  Dockerfile.frontend  SPEC.md  TEST-RESULTS.md  cori_celesti-nginx.conf  deploy-manual.sh  deploy-rsync.sh  docker-compose.yml  integration-test.sh
calendar-site/backend/: package-lock.json  package.json  (+2 more)
calendar-site/backend-rust/: Cargo.toml
expense-tracker/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  spec.md
expense-tracker/backend-rust/: Cargo.toml  Dockerfile
expense-tracker/backend-rust/src/: auth.rs  error.rs  lib.rs  main.rs  models.rs
expense-tracker/backend-rust/src/handlers/: categories.rs  mod.rs  years.rs
expense-tracker/backend-rust/src/storage/: categories.rs  mod.rs  years.rs
habits/: BOSS_QUESTS_DEVPLAN.md  BOSS_QUESTS_SPEC.md  Dockerfile.backend  Dockerfile.dev.frontend  Dockerfile.frontend  RULES.md  SPEC.md  UI.md  docker-compose.dev.yml
inventory/: .dockerignore  Dockerfile.backend  Dockerfile.dev.backend  Dockerfile.dev.frontend  Dockerfile.frontend  docker-compose.yml
inventory/backend-rust/: Cargo.toml
inventory/backend-rust/src/: auth.rs  error.rs  lib.rs  main.rs  models.rs
inventory/backend-rust/src/routes/: checks.rs  items.rs  mod.rs  tags.rs  todo_sets.rs  todos.rs
inventory/backend-rust/src/storage/: checks.rs  items.rs  mod.rs  todo_sets.rs  todos.rs
mood-tracker/: .gitignore  Dockerfile.backend  Dockerfile.frontend  SPEC.md  docker-compose.yml  nginx.conf
task-board/: Dockerfile.backend  Dockerfile.dev.frontend  Dockerfile.frontend  PLAN.md  SPEC.md  docker-compose.yml
(+237 files in other folders)
