[package]
name = "inventory-backend"
version = "1.0.0"
edition = "2021"
description = "Inventory tracker backend in Rust"

[dependencies]
# Web framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
